--- a/index.html
+++ b/index.html
@@ -4,13 +4,30 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Empty Crate Management System</title>
+    <meta name="theme-color" content="#2563eb" />
+    <meta name="description" content="Professional empty crate management system for depots" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="/icon-192.png" />
+    <title>CrateFlow - Empty Crate Management</title>
+    <meta property="og:title" content="CrateFlow - Empty Crate Management" />
+    <meta property="og:description" content="Professional empty crate management system for depots" />
     <meta property="og:image" content="https://bolt.new/static/og_default.png" />
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="CrateFlow - Empty Crate Management" />
+    <meta name="twitter:description" content="Professional empty crate management system for depots" />
     <meta name="twitter:image" content="https://bolt.new/static/og_default.png" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js')
+            .then(reg => console.log('Service Worker registered'))
+            .catch(err => console.log('Service Worker registration failed:', err));
+        });
+      }
+    </script>
   </body>
 </html>
